--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Caesar Cipher</title>
+    <title>ENCONTRO CRIPTOGRAFADO</title>
+    <link rel="icon" href="./assets/icon.png" type="image/png" >
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Hello world!</h1>
-    </div>
-    <script src="index.js" type="module"></script>
+    <!--<div id="root">-->
+    <main id="main">
+      <h1>ENCONTRO CRIPTOGRAFADO</h1>
+    <!--</div>-->
+
+      <section id="introduction">
+        Em uma reunião clandestina, os famosos detetives Sherlock Holmes e Hercule Poirot 
+        optam pela segurança da cifra de César para proteger seus segredos. Em meio a trocas 
+        de mensagens codificadas, discutem enigmas intrigantes e investigações misteriosas. 
+        A parceria secreta entre os dois detetives geniais promete desvendar mistérios enquanto 
+        mantém seus inimigos perplexos. Acompanhe essa emocionante trama, onde cada palavra cifrada 
+        esconde segredos essenciais para o desfecho dessa história cheia de suspense e astúcia.
+      </section>
+
+
+      <section id="displacement">
+      Escolha sua chave numérica:
+      <input type="number" id="offset" class="offset" value="1" min="1" max="50">
+      </section>
+
+      <section id="encryption">
+      <textarea id="message" class="area" placeholder="ESCREVA SUA MENSAGEM AQUI" required></textarea>
+      <br>
+      <button class="buttons" id="encrypt">CRIPTOGRAFAR</button>
+      <button class="buttons" id="decrypt">DESCRIPTOGRAFAR</button>
+      <br>
+      <textarea id="secretMessage" class="area"></textarea>
+      <br>
+      <button class="buttons" id="copyMessage">COPIAR MENSAGEM</button>
+      <button class="buttons" id="reload">NOVA MENSAGEM</button>
+      </section>      
+    </main>
+    <footer id="footer">
+      Desenvolvido por <a href="https://github.com/erikapeloggia/">@erikapeloggia</a>  
+    </footer>
+
+    <script src="index.js" type="module"></script> 
+  
   </body>
 </html>
+
+<!--icon: href="https://www.flaticon.com/br/icones-gratis/sherlock-holmes" 
+  Sherlock holmes ícones criados por paulalee-->
+
+  
