últimas alterações feitas

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
       <section id="displacement">
       Escolha sua chave numérica:
-      <input type="number" id="offset" class="offset" value="1" min="1" max="50">
+      <input type="number" id="offset" value="1" min="1" max="50">
       </section>
 
       <section id="encryption">
@@ -33,7 +33,7 @@
       <button class="buttons" id="encrypt">CRIPTOGRAFAR</button>
       <button class="buttons" id="decrypt">DESCRIPTOGRAFAR</button>
       <br>
-      <textarea id="secretMessage" class="area"></textarea>
+      <textarea id="secretMessage" class="area"></textarea> <!--travar textarea disable-->
       <br>
       <button class="buttons" id="copyMessage">COPIAR MENSAGEM</button>
       <button class="buttons" id="reload">NOVA MENSAGEM</button>
